<resources>
    <string name="app_name">VSDA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prePlantHeader">Pre Plant</string>
    <string name="prePlantSoilType">Soil Type</string>
    <string name="prePlantSoilTypeRadio1">Type1</string>
    <string name="prePlantSoilTypeRadio2">Type 2</string>
    <string name="SoilType">Soil Type</string>
    <string name="SoilNutrient">Soil Nutrient</string>
    <string name="Temperature">Temperature</string>
    <string name="Rain">Rain</string>
    <string name="rain_high">High</string>
    <string name="rain_average">Average</string>
    <string name="rain_low">Low</string>
    <string name="wetSeason">Wet Season</string>
    <string name="prePlantWetSeasonEarly">Early</string>
    <string name="prePlantWetSeasonAverage">Average</string>
    <string name="prePlantWetSeasonLate">Late</string>
    <string name="prePlantSoilNutrientLow">Low</string>
    <string name="prePlantSoilNutrientHigh">High</string>
    <string name="limeSoilNone">None</string>
    <string name="limeSoilCaO">CaO</string>
    <string name="limeSoilCaCO3">CaCO3</string>
    <string name="limeSoilOther">Other</string>
    <string name="SoilTilling">Soil Tilling</string>
    <string name="soilTillingYes">Yes</string>
    <string name="soilTillingNo">No</string>
    <string name="SaltTolerantRice">Salt Tolerant Rice</string>
    <string name="saltTolerantYes">Yes</string>
    <string name="saltTolerantNo">No</string>
    <string name="ShrimpStockingDensity">Shrimp Stocking Density</string>
    <string name="shrimpStockingDensityLow">Low</string>
    <string name="shrimpStockingDensityMedium">Medium</string>
    <string name="shrimpStockingDensityHigh">High</string>
    <string name="WaterColorManagement">Water Color Management</string>
    <string name="waterClorManagementZeolite">Zeolite</string>
    <string name="waterClorManagementDAPUREKali">DAP_URE_Kali</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="LimeSoil">Lime Soil</string>
    <string name="plantHeader">Plant</string>
    <string name="soilSalinity">Soil Salinity</string>
    <string name="soil_salinity_high">High</string>
    <string name="soil_salinity_moderate">Moderate</string>
    <string name="soil_salinity_low">Low</string>
    <string name="soilPh">Soil Ph</string>
    <string name="soilpH">Soil pH</string>
    <string name="plantSoilPHAcid">Acid</string>
    <string name="plantSoilBalanced">Balanced</string>
    <string name="plantSoilPHAlkaline">Alkaline</string>
    <string name="waterTemperature">Water Temperature</string>
    <string name="waterSalinity">Water Salinity</string>
    <string name="postPlantHeader">Post Plant</string>
    <string name="RiceColor">Rice Color</string>
    <string name="Green">Green</string>
    <string name="MidYellow">Mid Yellow</string>
    <string name="Yellow">Yellow</string>
</resources>
